[package]
name = "codex-minus"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/BigPizzaV3/CodexPlusPlus"
description = "Trimmed Codex++ Manager: relay profile switching, session repair, config doctor. No renderer injection."

[lib]
name = "codex_minus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "codex-minus"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
codex-plus-core = { git = "https://github.com/BigPizzaV3/CodexPlusPlus", rev = "59a2f90364525cd929444690fe536b9896de455d", package = "codex-plus-core" }
codex-plus-data = { git = "https://github.com/BigPizzaV3/CodexPlusPlus", rev = "59a2f90364525cd929444690fe536b9896de455d", package = "codex-plus-data" }
directories = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["custom-protocol", "tray-icon"] }
tauri-plugin-dialog = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"
